eBook Library: fix for UHD screens
Expand background image on screens bigger than FHD/1920px
to cover the entire screen area.

--- a/eBook_Library/styles.css
+++ b/eBook_Library/styles.css
@@ -410,3 +410,9 @@ body {
         max-width: 735px;
     }
 }
+@media (min-width: 2000px) {
+
+    html body /*UHD*/ {
+        background-size: cover;
+    }
+}
